--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 <head>
-	<title>D&D Soundboard</title>
+	<title>DnD Soundboard</title>
 	<link rel='stylesheet' href="style.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
